--- a/AthanManager/Properties/Settings.settings
+++ b/AthanManager/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="isha" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="minutes" Type="System.String" Scope="User">
+      <Value Profile="(Default)">4</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
